--- a/Servicios/Destapacaños-harpic-turbo.html
+++ b/Servicios/Destapacaños-harpic-turbo.html
@@ -130,27 +130,27 @@ Destapacaños harpic turbo
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-lanus.html">Destapa cañerias zona sur lanus </a> 
+       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Maquina-para-destapar-cañerias-cuanto-cuesta.html">Maquina para destapar cañerias cuanto cuesta </a> 
+       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
+       <a href="../Servicios/Remedio-casero-para-destapar-tuberias.html">Remedio casero para destapar tuberias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
+       <a href="../Destapa-Cañerias/Plomero-Destapa-Cañerias.html">Plomero Destapa Cañerias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
+       <a href="../Servicios/Destapador-de-cañerias-casero.html">Destapador de cañerias casero </a> 
          </li>
 <!--EndPostsList-->
 
@@ -213,57 +213,57 @@ Destapacaños harpic turbo
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
+       <a href="../Servicios/Destapar-cañerias-con-bicarbonato-de-sodio.html">Destapar cañerias con bicarbonato de sodio </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapador-De-Cantilde;erias-Electrico.html">Destapador De Cañerias Electrico </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
        <a href="../Destapa-Cañerias/Destapaciones-Urgencias-24hs.html">Destapaciones Urgencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-liquido-home-depot.html">Destapacaños liquido home depot </a> 
+       <a href="../Destapa-Cañerias/Maquina-para-destapar-cañerias-cuanto-cuesta.html">Maquina para destapar cañerias cuanto cuesta </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Cañerias.html">Destapador De Cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias-24hs.html">Destapaciones Emergencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
+       <a href="../Destapa-Cañerias/Limpieza-De-Desagues.html">Limpieza De Desagues </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
+       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Cantidad-de-inodoros-por-persona.html">Cantidad de inodoros por persona </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañerias.html">Destapar Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Baños.html">Destapaciones De Baños </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-pileta-de-la-cocina.html">Como destapar la cañeria de la pileta de la cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
